--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: url(/images/bg2.jpg);
+  background-size: 200%;
+  background-position: center;
+
 }
