--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,25 @@ body {
 
 
 }
+
+/* width */
+::-webkit-scrollbar { 
+  width: 5px; 
+  height: 5px;
+} 
+
+/* Track */
+::-webkit-scrollbar-track { 
+  background: #ffffff00; 
+} 
+
+/* Handle */
+::-webkit-scrollbar-thumb { 
+  background: #79797965; 
+  border-radius: 5px; 
+} 
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover { 
+  background: #555; 
+}
